# beadify

./: .gitignore  README.md  beadify.py  beadify_gui.py  pyproject.toml
colors/: mard.json
