[project]
name = "beadify"
version = "0.1.0"
description = "拼豆图纸生成器 - Pixel art to bead pattern converter"
requires-python = ">=3.10"
license = "AGPL-3.0-or-later"
dependencies = [
    "numpy",
    "pillow",
]

[project.optional-dependencies]
gui = [
    "PySide6",
]

[project.scripts]
beadify = "beadify:main"
beadify-gui = "beadify_gui:main"
